2016-06-28  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* config.h, db.c, elt-dirs.c, expand.c, find-suffix.c, hash.c, knj.c,
	knj.h, kpsewhich.c, make-suffix.c, path-elt.c, progname.c, readable.c,
	tilde.c, types.h, variable.c, win32lib.c, win32lib.h, xbasename.c,
	xdirname.c, xdirtest.c, xgetcwd.c: Eliminate global and static
	variables (w32 only).

2016-05-28  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tex-file.c: Fix a bug that TEXMFOUTPUT does not work (w32 only).
	See http://tug.org/pipermail/tex-k/2016-May/002719.html.

2016-05-20  Karl Berry  <karl@tug.org>

	* Version 6.2.2 for TeX Live 2016.

2016-05-13  Karl Berry  <karl@tug.org>

	* texmf.cnf (RISINPUTS, BLTXMLINPUTS): $TEXMF/biber
	rather than $TEXMF/bibtex.

2016-02-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	*knj.c: Disable unnecessary warning (w32 only).

2016-04-06  Karl Berry  <karl@tug.org>

	* texmf.cnf (TEXMFVAR, TEXMFCONFIG): 2016.
	(shell_escape_commands): add gregorio, fingers crossed.

	* cnf.c (do_line): do not keep checking ISSPACE beyond
	end of string.  (Can crash on lines without spaces.)
	Return error string if problems.
	* kpathsea_cnf_get: give warning, with line number,
        if do_line returns a message.

2016-02-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmf.cnf: Typo.

2016-04-06  Karl Berry  <karl@tug.org>

	* kpsewhich.c, et al.: copyright 2016.

2016-03-06  Karl Berry  <karl@tug.org>

	* version.ac: remove /dev for start of 2016 builds.

2016-02-27  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* kpsewhich.c: Allow Unicode file name for upmendex in kpsewhich.
	(Windows only)

2016-02-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.[ch], mingw32.[ch]: Define a function
	double win32_floor (double x), since floor is defined in cpascal.h.

2015-12-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.h: Update (w32 only).

2015-10-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpsewhich.c (USAGE): Say "list shown by -help-formats".
